re-worded portfolio description

--- a/style.css
+++ b/style.css
@@ -535,6 +535,10 @@ body {
   .hero-title {
     font-size: 4rem;
   }
+
+  .portfolio-all {
+    margin-bottom: 0;
+  }
 }
 
 @media (min-width: 821px) and (max-width: 991px) {
@@ -613,6 +617,10 @@ body {
 
   .portfolio-each-project {
     padding-bottom: 30px;
+  }
+
+  .portfolio-all {
+    margin-bottom: 0;
   }
 
   .contact-all {
@@ -730,6 +738,10 @@ body {
     padding-bottom: 30px;
   }
 
+  .portfolio-all {
+    margin-bottom: 0;
+  }
+
   .contact-all {
     text-align: center;
   }
@@ -840,6 +852,10 @@ body {
 
   .portfolio-each-project {
     padding-bottom: 30px;
+  }
+
+  .portfolio-all {
+    margin-bottom: 0;
   }
 
   .contact-all {
@@ -959,6 +975,10 @@ body {
 
   .portfolio-each-project {
     padding-bottom: 30px;
+  }
+
+  .portfolio-all {
+    margin-bottom: 0;
   }
 
   .contact-all {
@@ -1082,6 +1102,10 @@ body {
   .portfolio-img-update-mobile {
     display: block !important;
     margin: 0 auto !important;
+  }
+
+  .portfolio-all {
+    margin-bottom: 0;
   }
 
   .contact-all {
@@ -1224,6 +1248,10 @@ body {
     font-size: 1rem;
   }
 
+  .portfolio-all {
+    margin-bottom: 0;
+  }
+
   .contact-all {
     text-align: center;
   }
@@ -1340,6 +1368,10 @@ body {
 
   .portfolio-button {
     font-size: 1rem;
+  }
+
+  .portfolio-all {
+    margin-bottom: 0;
   }
 
   .contact-all {
