--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
   --project-bg: #ebf0f6;
   --header-bg-color: #f2f2f2;
   --darker-text-color: #2f3a47;
+  --purple: #362a9e;
   --white-opaque: rgba(255, 255, 255, 0.6);
   --box-shadow: 0 1px 1px hsl(0deg 0% 0% / 0.075),
     0 2px 2px hsl(0deg 0% 0% / 0.075), 0 4px 4px hsl(0deg 0% 0% / 0.075),
@@ -32,10 +33,11 @@ body {
   font-family: var(--sub-font);
   background: #e6eaf4;
   color: #404156;
+  /* overflow-x: hidden; */
+  margin: 0 auto;
 }
 
 .bold {
-  /* font-weight: 700; */
   color: var(--blue-purple);
 }
 
@@ -49,18 +51,85 @@ body {
   padding-right: 20px;
   padding-bottom: 0 !important;
   padding-top: 0;
-  background-color: rgb(230, 234, 244, 0.9);
+  background-color: rgb(230, 234, 244, 0.95);
 }
 
-.navbar-light .navbar-toggler {
+/* .navbar-light .navbar-toggler {
   border: none !important;
-  border-color: white !important;
   width: 60px;
+} */
+
+.navbar-toggler {
+  width: 20px;
+  height: 20px;
+  position: relative;
+  transition: 0.5s ease-in-out;
 }
+
+.navbar-toggler,
+.navbar-toggler:focus,
+.navbar-toggler:active,
+.navbar-toggler-icon:focus {
+  outline: none;
+  border: 0;
+  box-shadow: none;
+}
+
+.navbar-toggler span {
+  margin: 0;
+  padding: 0;
+}
+
+.toggler-icon {
+  display: block;
+  position: absolute;
+  height: 3px;
+  width: 100%;
+  background: var(--darker-text-color);
+  border-radius: 1px;
+  opacity: 1;
+  left: 0;
+  transform: rotate(0deg);
+  transition: 0.25s ease-in-out;
+}
+
+.middle-bar {
+  margin-top: 0px;
+}
+
+.navbar-toggler .top-bar {
+  margin-top: 0px;
+  transform: rotate(135deg);
+}
+
+.navbar-toggler .middle-bar {
+  opacity: 0;
+  filter: alpha(opacity=0);
+}
+.navbar-toggler .bottom-bar {
+  margin-top: 0px;
+  transform: rotate(-135deg);
+}
+
+.navbar-toggler.collapsed .top-bar {
+  margin-top: -20px;
+  transform: rotate(0deg);
+}
+
+.navbar-toggler.collapsed .middle-bar {
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+
+.navbar-toggler.collapsed .bottom-bar {
+  margin-top: 20px;
+  transform: rotate(0deg);
+}
+
 .navbar-brand {
   font-family: var(--header-font);
   font-size: 50px;
-  margin-left: 50px;
+  /* margin-left: 50px; */
   color: var(--hover-bg) !important;
 }
 
@@ -71,7 +140,7 @@ body {
 
 .navbar-nav {
   margin-left: auto;
-  margin-right: 50px;
+  /* margin-right: 50px; */
   font-size: 17px;
   align-items: center;
 }
@@ -83,6 +152,7 @@ body {
   padding-bottom: 2px !important;
   padding-left: 0 !important;
   padding-right: 0 !important;
+  letter-spacing: 1px;
 }
 
 .nav-link::after {
@@ -91,8 +161,8 @@ body {
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 2px;
-  background: currentColor;
+  height: 3px;
+  background: var(--light-purple);
   transform: scaleX(0);
   transform-origin: right;
   transition: transform 250ms ease-in;
@@ -197,13 +267,15 @@ body {
 
 /*-------------------------------------------------------------------------------ABOUT ME*/
 .about-me-all {
-  margin-top: 60px;
+  margin-top: 100px;
   padding-bottom: 160px;
 }
 
 .about-header {
   text-align: center !important;
-  margin-bottom: 60px;
+  margin-bottom: 100px;
+  color: var(--purple);
+  letter-spacing: 0.2rem;
 }
 
 .about-title {
@@ -219,6 +291,12 @@ body {
   border-radius: 50%;
   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
   width: 80%;
+  transition: all 0.3s ease-in-out;
+}
+
+.bio-pic:hover {
+  transform: scale(1.03);
+  box-shadow: 0px 7px 15px 0px rgba(0, 0, 0, 0.5);
 }
 
 .about-section {
@@ -227,14 +305,15 @@ body {
 .about-paragraph {
   font-family: var(--crimson-text);
   font-size: 1.5rem;
-
+  letter-spacing: 0.5px;
   margin-left: 18px;
 }
 
 .about-paragraph-two {
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   margin-bottom: 80px;
   margin-left: 18px;
+  letter-spacing: 0.5px;
 }
 
 /* .about-link {
@@ -269,6 +348,7 @@ body {
 }
 
 .email-button,
+.instagram-button,
 .linkedin-button,
 .github-button {
   text-decoration: none;
@@ -289,8 +369,13 @@ body {
 
 /* --------------------------------------------------------------------------SKILLS */
 .skills-all {
-  margin-top: 60px;
-  margin-bottom: 60px;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  opacity: 1;
+}
+
+.icon-row {
+  opacity: 0;
 }
 
 .icon-container {
@@ -301,7 +386,7 @@ body {
 }
 
 .icon {
-  max-width: 120px;
+  max-width: 96px;
 }
 
 .icon-sandbox {
@@ -310,16 +395,22 @@ body {
 
 .icon-text {
   display: block;
+  letter-spacing: 1px;
 }
 
 /* -----------------------------------------------------------------PORTFOLIO UPDATE */
 .portfolio-all {
-  margin-top: 60px;
+  margin-top: 100px;
   margin-bottom: 60px;
 }
 
 .portfolio-each-project {
   margin-bottom: 80px;
+}
+
+p.project-paragraph {
+  letter-spacing: 0.03rem;
+  line-height: 1.5;
 }
 
 .portfolio-img-update {
@@ -384,6 +475,11 @@ body {
 
 .icons-used {
   max-width: 40px;
+  margin-right: 5px;
+  transition: 0.2s ease-in-out;
+}
+img.icons-used:hover {
+  transform: scale(1.2);
 }
 
 .project-icons-container {
@@ -403,6 +499,13 @@ body {
 /* -----------------------------------------------------------------------------CONTACT */
 .form-input {
   margin-bottom: 10px;
+}
+
+.contact-paragraph {
+  letter-spacing: 0.03rem;
+  line-height: 1.5rem;
+  text-align: center;
+  font-weight: 400;
 }
 
 .contact-submit-button {
@@ -427,40 +530,48 @@ body {
   display: flex;
   margin-top: 22px;
 }
+
+.contact-social-links > * {
+  margin: 0 20px;
+}
 .contact-icon-links {
   display: block;
-  margin-top: 100px;
+  margin-top: 60px;
 }
 
 .github-section {
-  margin-left: 40px;
-  margin-right: 40px;
+  /* margin-left: 40px;
+  margin-right: 40px; */
 }
 
+.email-section,
 .linkedin-section,
 .github-section,
-.email-section {
+.instagram-section {
   display: block;
   transition: 300ms;
 }
 
+.email-section:hover,
 .linkedin-section:hover,
 .github-section:hover,
-.email-section:hover {
+.instagram-section:hover {
   transform: scale(1.2);
   z-index: 2;
 }
 
+.email-icon,
 .github-icon,
 .linkedin-icon,
-.email-icon {
+.instagram-icon {
   width: 60px;
 }
 
 /*---------------------------------------------------------------------------------HOME */
 
 .contact-all {
-  margin-top: 60px;
+  margin-top: 100px;
+  margin-bottom: 120px;
 }
 
 /*UX LANDING PAGE*/
@@ -539,6 +650,10 @@ body {
   .portfolio-all {
     margin-bottom: 0;
   }
+
+  .about-paragraph-two {
+    font-size: 1rem;
+  }
 }
 
 @media (min-width: 821px) and (max-width: 991px) {
@@ -585,6 +700,10 @@ body {
     padding-bottom: 80px;
   }
 
+  .about-paragraph-two {
+    font-size: 18px;
+  }
+
   .all-buttons {
     padding-left: 0 !important;
     margin-left: 0 !important;
@@ -626,8 +745,40 @@ body {
   .contact-all {
     text-align: center;
   }
-}
 
+  .icon {
+    max-width: 76px;
+  }
+}
+@media (max-width: 991px) {
+  .bio-pic {
+    width: 60%;
+  }
+  .resume-button-home.hero-button-portfolio {
+    width: 100%;
+    display: block;
+    padding: 12px 0;
+    color: var(--background-color);
+    background-color: var(--text-color);
+  }
+
+  .resume-button-home.hero-button-portfolio.resume {
+    background-color: var(--background-color);
+    color: var(--text-color);
+  }
+
+  .col-lg-12.d-flex.justify-content-center {
+    display: block !important;
+  }
+  .hero-buttons-all > :first-child {
+    display: block;
+    width: 100%;
+    margin-top: 80px !important;
+  }
+  .hero-buttons-all > :nth-child(2) {
+    display: none;
+  }
+}
 @media (min-width: 768px) and (max-width: 820px) {
   .navbar {
     padding-top: 4px;
@@ -687,12 +838,6 @@ body {
     padding-bottom: 60px;
   }
 
-  .resume-button-home {
-    font-size: 17px;
-    padding: 9px 21px;
-    margin-left: 0;
-  }
-
   .about-header {
     margin-bottom: 28px;
   }
@@ -716,6 +861,7 @@ body {
     margin-left: 0 !important;
     margin-bottom: 40px;
     text-align: center;
+    font-size: 17px;
   }
 
   .all-buttons {
@@ -744,6 +890,9 @@ body {
 
   .contact-all {
     text-align: center;
+  }
+  .icon {
+    max-width: 60px;
   }
 }
 
@@ -806,12 +955,6 @@ body {
     padding-bottom: 60px;
   }
 
-  .resume-button-home {
-    font-size: 17px;
-    padding: 9px 21px;
-    margin-left: 0;
-  }
-
   .about-header {
     margin-bottom: 28px;
   }
@@ -860,6 +1003,9 @@ body {
 
   .contact-all {
     text-align: center;
+  }
+  .icon {
+    max-width: 50px;
   }
 }
 
@@ -922,12 +1068,6 @@ body {
     padding-bottom: 60px;
   }
 
-  .resume-button-home {
-    font-size: 17px;
-    padding: 9px 21px;
-    margin-left: 0;
-  }
-
   .about-header {
     margin-bottom: 28px;
   }
@@ -984,6 +1124,12 @@ body {
   .contact-all {
     text-align: center;
   }
+  .icon {
+    max-width: 42px;
+  }
+  .icon-text {
+    font-size: 15px;
+  }
 }
 
 @media (min-width: 415px) and (max-width: 485px) {
@@ -1024,6 +1170,7 @@ body {
   .hero-paragraph {
     font-size: 18px;
     margin-bottom: 0;
+    letter-spacing: 1px;
   }
 
   .hero-buttons-all {
@@ -1043,11 +1190,6 @@ body {
   .hero-button {
     margin-top: 10px !important;
     margin-bottom: 20px;
-  }
-  .resume-button-home {
-    font-size: 14px;
-    padding: 7px 18px;
-    margin-left: 0;
   }
 
   .about-header {
@@ -1085,10 +1227,7 @@ body {
     margin-top: 10px !important;
     margin-bottom: 20px;
   }
-  .resume-button-home {
-    font-size: 16px;
-    padding: 9px 20px;
-  }
+
   .all-buttons {
     margin-left: 0;
   }
@@ -1111,11 +1250,20 @@ body {
   .contact-all {
     text-align: center;
   }
+  .contact-social-links > * {
+    margin: 0 12px;
+  }
+  .icon {
+    max-width: 36px;
+  }
+  .icon-text {
+    font-size: 14px;
+  }
 }
 
 @media (min-width: 376px) and (max-width: 414px) {
   .navbar {
-    padding: 4px 0 12px 0;
+    padding: 4px 20px 12px 0px;
   }
   .navbar-brand {
     font-size: 26px;
@@ -1221,11 +1369,6 @@ body {
     margin-top: 10px !important;
     margin-bottom: 20px;
   }
-  .resume-button-home {
-    font-size: 14px;
-    padding: 7px 18px;
-    margin-left: 0;
-  }
 
   .portfolio-each-project {
     margin-bottom: 60px;
@@ -1255,11 +1398,20 @@ body {
   .contact-all {
     text-align: center;
   }
+  .contact-social-links > * {
+    margin: 0 10px;
+  }
+  .icon {
+    max-width: 32px;
+  }
+  .icon-text {
+    font-size: 13px;
+  }
 }
 
 @media (max-width: 375px) {
   .navbar {
-    padding: 4px 0 12px 0;
+    padding: 4px 20px 12px 0px;
   }
   .navbar-brand {
     font-size: 26px;
@@ -1304,6 +1456,13 @@ body {
     margin-bottom: 40px;
   }
 
+  .email-icon,
+  .github-icon,
+  .linkedin-icon,
+  .instagram-icon {
+    width: 50px;
+  }
+
   .footer-code {
     margin-left: 18px;
     margin-right: 18px;
@@ -1343,11 +1502,6 @@ body {
     font-size: 14px;
     margin-bottom: 30px;
   }
-  .resume-button-home {
-    font-size: 14px;
-    padding: 7px 18px;
-    margin-left: 0;
-  }
 
   .portfolio-each-project {
     margin-bottom: 60px;
@@ -1377,4 +1531,39 @@ body {
   .contact-all {
     text-align: center;
   }
+  .contact-social-links > * {
+    margin: 0 10px;
+  }
+  .icon {
+    max-width: 30px;
+  }
+  .icon-text {
+    font-size: 12px;
+  }
+}
+
+/* JS appear animations */
+.appear {
+  opacity: 1;
+  transition: all 0.6s ease-in-out;
+}
+
+.from-left {
+  transform: translateX(25%);
+}
+
+.from-right {
+  transform: translateX(50%);
+}
+
+.from-left,
+.from-right {
+  transition: opacity 250ms ease-in, transform 400ms ease-in;
+  opacity: 0;
+}
+
+.from-left.appear,
+.from-right.appear {
+  transform: translateX(0) !important;
+  opacity: 1 !important;
 }
