--- a/style.css
+++ b/style.css
@@ -174,6 +174,19 @@ body {
   transform-origin: left;
 }
 
+/* .nav-resume {
+  border: 1px solid black;
+}
+.nav-link.nav-resume:after {
+  content: "";
+}
+.nav-link.nav-resume:hover {
+  pointer-events: none;
+}
+.nav-link.nav-resume:hover:after {
+  pointer-events: none;
+} */
+
 /* .navbar-nav .nav-link:hover {
   color: white !important;
   background-color: rgba(94, 101, 109, 0.85) !important;
@@ -439,6 +452,24 @@ p.project-paragraph {
   cursor: pointer;
 }
 
+/* .nav-link::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 3px;
+  background: var(--light-purple);
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 250ms ease-in;
+}
+
+.nav-link:hover::after {
+  transform: scaleX(1);
+  transform-origin: left;
+} */
+
 .portfolio-button:hover {
   color: var(--blue-purple);
 }
@@ -449,7 +480,7 @@ p.project-paragraph {
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 2.5px;
+  height: 3px;
   background: currentColor;
   transform: scaleX(0);
   transform-origin: right;
@@ -477,7 +508,7 @@ p.project-paragraph {
   text-shadow: none;
   padding: 10px 30px;
   border: 1px solid var(--text-color);
-  border-radius: 5px;
+  /* border-radius: 5px; */
   box-shadow: var(--subtle-box-shadow);
 }
 
